--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -4,19 +4,19 @@ on:
   push
 
 jobs:
-  - echo-hello:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Say Hello
-          run: echo "Hello, World!"
+  echo-hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Say Hello
+        run: echo "Hello, World!"
   
-  - echo-goodbye:
-      runs-on: ubuntu-latest
-      steps:
-        - name : Failed Step
-          run: |
-            echo "I will fail"
-            exit 1
-        - name : Say Goodbye
-          run: echo Goodbye!
+  echo-goodbye:
+    runs-on: ubuntu-latest
+    steps:
+      - name : Failed Step
+        run: |
+          echo "I will fail"
+          exit 1
+      - name : Say Goodbye
+        run: echo Goodbye!
         
